[package]
name = "kpetrov"
keywords = ["web","wasm","webassembly"]
categories = ["wasm","web-programming"]
authors = ["Konstantin Petrov <oku6er@gmail.com>"]
description = "Blog app built with Rust and WebAssembly."
repository = "https://github.com/0k6r/kpetrov.git"
license = "Apache-2.0"
readme = "README.md"
version = "0.0.1"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = ["frontend"]
