[package]
name = "frontend"
keywords = ["web","wasm","webassembly"]
categories = ["wasm","web-programming"]
authors = ["Konstantin Petrov <oku6er@gmail.com>"]
description = "Blog app built with Rust and WebAssembly."
repository = "https://github.com/0k6r/kpetrov.git"
license = "Apache-2.0"
readme = "../README.md"
version = "0.0.13"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
web_logger = "0.2"
cfg-if = "1.0"
wasm-bindgen = "0.2.73"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
serde = "1.0.125"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = "0.17.4"
yew-router = {version = "0.14.0", features = ["web_sys"] }
kpetrov = { version = "0.0.1", path = ".." }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.8"
